--- a/style.css
+++ b/style.css
@@ -12,11 +12,12 @@ section {
   background-size: cover;
   background-attachment: fixed;
 }
+
 .shadow{
   position: absolute;
   background: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4));
   opacity: 0.5;
-  height: 100%;
+  height: 162%;
   width: 100%;
 }
 .header {
@@ -111,6 +112,9 @@ margin: 80px 106px 0;
     .para{
         font-size: 1.45rem;
         margin-top: 50px;
+    }
+      .shadow{
+        height: 100%;
     }
 }
 
