--- a/style.css
+++ b/style.css
@@ -5,18 +5,16 @@
   font-family: 'Poppins', sans-serif;
   font-size: 1rem;
 }
-
 section {
   min-height: 100vh;
-  background-image: url('https://images03.nicepage.com/a1389d7bc73adea1e1c1fb7e/915988c20bba56c0b5691503/pexels-photo-3218467.jpeg');
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)),url('https://images03.nicepage.com/a1389d7bc73adea1e1c1fb7e/915988c20bba56c0b5691503/pexels-photo-3218467.jpeg');
   background-size: cover;
   background-attachment: fixed;
 }
 .shadow{
   position: absolute;
-  background: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4));
   opacity: 0.5;
-  height: 162%;
+  height: 100vh;
   width: 100%;
 }
 .header {
