--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap');
+
+
 * {
   margin: 0;
   padding: 0;
@@ -6,17 +8,11 @@
   font-size: 1rem;
 }
 section {
-  min-height: 100vh;
   background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)),url('https://images03.nicepage.com/a1389d7bc73adea1e1c1fb7e/915988c20bba56c0b5691503/pexels-photo-3218467.jpeg');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-}
-.shadow{
-  position: absolute;
-  opacity: 0.5;
-  height: 100vh;
-  width: 100%;
+  min-height: 100vh;
 }
 .header {
   display: flex;
@@ -64,6 +60,13 @@ margin: 80px 106px 0;
 .path{
     margin-top: 2.75rem;
 }
+.scroll{
+  position: absolute;
+  top: 200%;
+  background: #fff;
+  width: 100%;
+  height: 50%;
+}
 @media (max-width: 600px) {
   .title {
     font-size: 2rem;
@@ -73,9 +76,7 @@ margin: 80px 106px 0;
     font-size: 1rem;
     width: 340px;
   }
-  .shadow{
-      height: 112%;
-  }
+ 
 }
 @media (min-width: 601px) and (max-width: 1000px){
     .title {
@@ -87,9 +88,7 @@ margin: 80px 106px 0;
         margin-top: 60px;
         width: 560px;
       }
-    .shadow{
-        height:110%;
-    }
+   
 }
 @media (min-width: 1000px) and (max-width: 1335px){
     .title{
@@ -101,9 +100,7 @@ margin: 80px 106px 0;
         align-items: center;
         width: 620px;
     }
-    .shadow{
-        height: 123%;
-    }
+   
 }
 
 @media (min-width: 1336px) and (max-width:2000px){
@@ -111,8 +108,6 @@ margin: 80px 106px 0;
         font-size: 1.45rem;
         margin-top: 50px;
     }
-      .shadow{
-        height: 112%;
-    }
+     
 }
 
